[package]
name = "webhooks_to_telegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
envy = "0.4.2"
log = "0.4"
pretty_env_logger = "0.4"
regex = "1"
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json"] }
serde = { version = "1.0", features = ["derive"] }
teloxide = { version = "0.11", features = ["macros"] }
